sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__locked_sets__tests__snapshots__base_3_sample_4_direct_candidates.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/locked_sets.rs
description: Strategy LockedSets executed on grid base_3_sample_4_direct_candidates
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │   3 ║  23 │  2  │  23 ║     │     │     ║
    - ║  5  │  9  │     ║   6 │     │   6 ║  1  │  4  │  7  ║
    - ║     │     │  8  ║     │  8  │  8  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │ 1   │ 1 3 ║     │ 12  │ 123 ║     │  2  │     ║
    - ║ 4 6 │ 4 6 │ 4   ║  9  │  5  │   6 ║  56 │   6 │  8  ║
    - ║     │     │     ║     │     │ 7   ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │ 1   │ 1   ║     │     │     ║
    - ║ 4 6 │  7  │  2  ║ 456 │  5  │   6 ║  56 │  3  │  5  ║
    - ║     │     │     ║     │  8  │  8  ║   9 │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │ 1   │ 1 3 ║     │     │     ║     │     │ 1 3 ║
    - ║  7  │  56 │     ║  56 │  4  │   6 ║  2  │  9  │     ║
    - ║     │     │     ║     │     │  8  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │ 1   ║     │     │     ║     │ 1   │     ║
    - ║ 4   │  2  │ 4   ║  5  │  3  │     ║  8  │     │  6  ║
    - ║   9 │     │   9 ║     │     │   9 ║     │ 7   │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │   3 ║     │     │  2  ║   3 │     │   3 ║
    - ║  8  │ 4 6 │ 4   ║  1  │  7  │   6 ║ 4   │  5  │ 4   ║
    - ║     │     │   9 ║     │     │   9 ║     │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │     │     ║     │     │     ║   3 │ 1   │     ║
    - ║     │     │  5  ║  7  │  6  │  4  ║     │     │  9  ║
    - ║     │  8  │     ║     │     │     ║     │  8  │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │     ║  2  │ 12  │     ║     │ 1   │ 1   ║
    - ║ 4   │  3  │  6  ║     │     │  5  ║ 4   │     │ 4   ║
    - ║   9 │     │     ║     │   9 │     ║ 7   │ 78  │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │   3 ║   3 │     │     ║
    - ║  1  │ 4   │ 4   ║  8  │     │     ║ 456 │   6 │  2  ║
    - ║     │     │ 7 9 ║     │   9 │   9 ║ 7   │ 7   │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - "r0c2: delete candidate 3, because of: r0c2: candidate 8"
    - "r1c1: delete candidate 4, r5c1: delete candidate 4, because of: r8c1: candidate 4"
    - "r1c5: delete candidates 1,2,3,6, because of: r1c5: candidate 7"
    - "r1c6: delete candidate 5, r2c6: delete candidate 5, because of: r2c8: candidate 5"
    - "r1c7: delete candidate 6, because of: r1c7: candidate 2"
    - "r2c3: delete candidate 5, r2c4: delete candidate 5, r2c6: delete candidate 5, because of: r2c8: candidate 5"
    - "r2c3: delete candidate 5, r3c3: delete candidate 5, because of: r4c3: candidate 5"
    - "r2c3: delete candidates 5,6, because of: r2c3: candidate 4"
    - "r3c1: delete candidates 1,6, because of: r3c1: candidate 5"
    - "r3c3: delete candidate 5, because of: r4c3: candidate 5"
    - "r3c5: delete candidate 6, because of: r3c5: candidate 8"
    - "r4c0: delete candidate 9, r4c2: delete candidate 9, because of: r4c5: candidate 9"
    - "r4c7: delete candidate 1, because of: r4c7: candidate 7"
    - "r5c5: delete candidate 9, r8c5: delete candidate 9, because of: r4c5: candidate 9"
    - "r5c5: delete candidates 6,9, because of: r5c5: candidate 2"
    - "r5c6: delete candidate 3, r8c6: delete candidate 3, because of: r6c6: candidate 3"
    - "r6c7: delete candidate 8, because of: r6c1: candidate 8"
    - "r7c0: delete candidate 2, because of: r6c0: candidate 2"
    - "r7c0: delete candidate 2, r7c4: delete candidate 2, because of: r7c3: candidate 2"
    - "r7c4: delete candidate 2, because of: r7c3: candidate 2"
    - "r7c4: delete candidate 9, because of: r8c4: candidate 9"
    - "r8c2: delete candidate 4, r8c6: delete candidate 4, because of: r8c1: candidate 4"
    - "r8c2: delete candidates 4,9, because of: r8c2: candidate 7"
    - "r8c6: delete candidate 3, because of: r6c6: candidate 3"
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │     ║  23 │  2  │  23 ║     │     │     ║
    - ║  5  │  9  │     ║   6 │     │   6 ║  1  │  4  │  7  ║
    - ║     │     │  8  ║     │  8  │  8  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │ 1   │ 1 3 ║     │ 12  │     ║     │  2  │     ║
    - ║ 4 6 │   6 │ 4   ║  9  │  5  │     ║   6 │     │  8  ║
    - ║     │     │     ║     │     │ 7   ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │ 1   │ 1   ║     │     │     ║
    - ║ 4 6 │  7  │  2  ║ 4   │     │   6 ║   6 │  3  │  5  ║
    - ║     │     │     ║     │  8  │  8  ║   9 │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │ 1 3 ║     │     │     ║     │     │ 1 3 ║
    - ║  7  │  5  │     ║   6 │  4  │     ║  2  │  9  │     ║
    - ║     │     │     ║     │     │  8  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │ 1   ║     │     │     ║     │     │     ║
    - ║ 4   │  2  │ 4   ║  5  │  3  │     ║  8  │     │  6  ║
    - ║     │     │     ║     │     │   9 ║     │ 7   │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │   3 ║     │     │  2  ║     │     │   3 ║
    - ║  8  │   6 │ 4   ║  1  │  7  │     ║ 4   │  5  │ 4   ║
    - ║     │     │   9 ║     │     │     ║     │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │     │     ║     │     │     ║   3 │ 1   │     ║
    - ║     │     │  5  ║  7  │  6  │  4  ║     │     │  9  ║
    - ║     │  8  │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║  2  │ 1   │     ║     │ 1   │ 1   ║
    - ║ 4   │  3  │  6  ║     │     │  5  ║ 4   │     │ 4   ║
    - ║   9 │     │     ║     │     │     ║ 7   │ 78  │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │   3 ║     │     │     ║
    - ║  1  │ 4   │     ║  8  │     │     ║  56 │   6 │  2  ║
    - ║     │     │ 7   ║     │   9 │     ║ 7   │ 7   │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons:
      - position:
          row: 0
          column: 2
        candidates:
          - 8
    actions:
      - position:
          row: 0
          column: 2
        deleteCandidates:
          - 3
  - reasons:
      - position:
          row: 8
          column: 1
        candidates:
          - 4
    actions:
      - position:
          row: 1
          column: 1
        deleteCandidates:
          - 4
      - position:
          row: 5
          column: 1
        deleteCandidates:
          - 4
  - reasons:
      - position:
          row: 1
          column: 5
        candidates:
          - 7
    actions:
      - position:
          row: 1
          column: 5
        deleteCandidates:
          - 1
          - 2
          - 3
          - 6
  - reasons:
      - position:
          row: 2
          column: 8
        candidates:
          - 5
    actions:
      - position:
          row: 1
          column: 6
        deleteCandidates:
          - 5
      - position:
          row: 2
          column: 6
        deleteCandidates:
          - 5
  - reasons:
      - position:
          row: 1
          column: 7
        candidates:
          - 2
    actions:
      - position:
          row: 1
          column: 7
        deleteCandidates:
          - 6
  - reasons:
      - position:
          row: 2
          column: 8
        candidates:
          - 5
    actions:
      - position:
          row: 2
          column: 3
        deleteCandidates:
          - 5
      - position:
          row: 2
          column: 4
        deleteCandidates:
          - 5
      - position:
          row: 2
          column: 6
        deleteCandidates:
          - 5
  - reasons:
      - position:
          row: 4
          column: 3
        candidates:
          - 5
    actions:
      - position:
          row: 2
          column: 3
        deleteCandidates:
          - 5
      - position:
          row: 3
          column: 3
        deleteCandidates:
          - 5
  - reasons:
      - position:
          row: 2
          column: 3
        candidates:
          - 4
    actions:
      - position:
          row: 2
          column: 3
        deleteCandidates:
          - 5
          - 6
  - reasons:
      - position:
          row: 3
          column: 1
        candidates:
          - 5
    actions:
      - position:
          row: 3
          column: 1
        deleteCandidates:
          - 1
          - 6
  - reasons:
      - position:
          row: 4
          column: 3
        candidates:
          - 5
    actions:
      - position:
          row: 3
          column: 3
        deleteCandidates:
          - 5
  - reasons:
      - position:
          row: 3
          column: 5
        candidates:
          - 8
    actions:
      - position:
          row: 3
          column: 5
        deleteCandidates:
          - 6
  - reasons:
      - position:
          row: 4
          column: 5
        candidates:
          - 9
    actions:
      - position:
          row: 4
          column: 0
        deleteCandidates:
          - 9
      - position:
          row: 4
          column: 2
        deleteCandidates:
          - 9
  - reasons:
      - position:
          row: 4
          column: 7
        candidates:
          - 7
    actions:
      - position:
          row: 4
          column: 7
        deleteCandidates:
          - 1
  - reasons:
      - position:
          row: 4
          column: 5
        candidates:
          - 9
    actions:
      - position:
          row: 5
          column: 5
        deleteCandidates:
          - 9
      - position:
          row: 8
          column: 5
        deleteCandidates:
          - 9
  - reasons:
      - position:
          row: 5
          column: 5
        candidates:
          - 2
    actions:
      - position:
          row: 5
          column: 5
        deleteCandidates:
          - 6
          - 9
  - reasons:
      - position:
          row: 6
          column: 6
        candidates:
          - 3
    actions:
      - position:
          row: 5
          column: 6
        deleteCandidates:
          - 3
      - position:
          row: 8
          column: 6
        deleteCandidates:
          - 3
  - reasons:
      - position:
          row: 6
          column: 1
        candidates:
          - 8
    actions:
      - position:
          row: 6
          column: 7
        deleteCandidates:
          - 8
  - reasons:
      - position:
          row: 6
          column: 0
        candidates:
          - 2
    actions:
      - position:
          row: 7
          column: 0
        deleteCandidates:
          - 2
  - reasons:
      - position:
          row: 7
          column: 3
        candidates:
          - 2
    actions:
      - position:
          row: 7
          column: 0
        deleteCandidates:
          - 2
      - position:
          row: 7
          column: 4
        deleteCandidates:
          - 2
  - reasons:
      - position:
          row: 7
          column: 3
        candidates:
          - 2
    actions:
      - position:
          row: 7
          column: 4
        deleteCandidates:
          - 2
  - reasons:
      - position:
          row: 8
          column: 4
        candidates:
          - 9
    actions:
      - position:
          row: 7
          column: 4
        deleteCandidates:
          - 9
  - reasons:
      - position:
          row: 8
          column: 1
        candidates:
          - 4
    actions:
      - position:
          row: 8
          column: 2
        deleteCandidates:
          - 4
      - position:
          row: 8
          column: 6
        deleteCandidates:
          - 4
  - reasons:
      - position:
          row: 8
          column: 2
        candidates:
          - 7
    actions:
      - position:
          row: 8
          column: 2
        deleteCandidates:
          - 4
          - 9
  - reasons:
      - position:
          row: 6
          column: 6
        candidates:
          - 3
    actions:
      - position:
          row: 8
          column: 6
        deleteCandidates:
          - 3
