sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__locked_sets__tests__snapshots__base_3_sample_5.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/locked_sets.rs
description: Strategy LockedSets executed on grid base_3_sample_5
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │ 12  │ 1   ║ 123 │     │     ║ 1 3 │     │     ║
    - ║  9  │     │     ║     │  8  │  4  ║     │  6  │  5  ║
    - ║     │ 7   │ 7   ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 1   │     ║ 1 3 │ 1 3 │     ║     │   3 │     ║
    - ║  6  │     │  4  ║     │     │  5  ║  2  │     │  7  ║
    - ║     │  8  │     ║   9 │   9 │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │ 1   ║ 12  │     │  2  ║ 1   │     │     ║
    - ║  5  │  3  │     ║   6 │  7  │     ║ 4   │  8  │ 45  ║
    - ║     │     │     ║   9 │     │     ║   9 │     │   9 ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║  23 │   3 │     ║     │  2  │  2  ║
    - ║  7  │  6  │     ║     │     │  1  ║  5  │ 4   │ 4   ║
    - ║     │     │  89 ║  8  │     │     ║     │     │  89 ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │     ║  2  │     │  2  ║     │  2  │     ║
    - ║ 4   │  5  │  3  ║   6 │   6 │     ║ 4   │ 4   │  1  ║
    - ║     │     │     ║ 78  │     │ 78  ║  89 │ 7   │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │ 12  │ 1   ║     │     │     ║     │  2  │     ║
    - ║     │     │     ║  4  │  5  │  9  ║  6  │     │  3  ║
    - ║     │  8  │  8  ║     │     │     ║     │ 7   │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║     │     │     ║   3 │     │     ║
    - ║  1  │ 4   │  5  ║     │  2  │  6  ║ 4   │  9  │ 4   ║
    - ║     │ 7   │     ║ 78  │     │     ║  8  │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │     │     ║ 1   │     │     ║   3 │   3 │     ║
    - ║     │     │  2  ║  5  │  4  │     ║     │  5  │  56 ║
    - ║     │ 7 9 │     ║ 789 │     │ 78  ║  8  │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │  2  ║
    - ║  8  │ 4   │   6 ║  5  │  5  │  3  ║  7  │  1  │ 456 ║
    - ║     │   9 │   9 ║   9 │   9 │     ║     │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - "r0c1: delete candidate 1, r0c2: delete candidate 1, r1c1: delete candidate 1, because of: "
    - "r0c1: delete candidate 7, because of: "
    - "r0c2: delete candidate 1, r5c2: delete candidate 1, because of: "
    - "r0c3: delete candidate 2, r2c3: delete candidate 2, because of: "
    - "r1c3: delete candidate 3, r1c4: delete candidate 3, because of: "
    - "r1c4: delete candidate 3, because of: "
    - "r2c0: delete candidate 2, r4c0: delete candidate 2, because of: "
    - "r2c3: delete candidate 1, r2c6: delete candidate 1, because of: "
    - "r2c8: delete candidate 5, because of: "
    - "r2c8: delete candidate 5, r7c8: delete candidate 5, r8c8: delete candidate 5, because of: "
    - "r3c3: delete candidate 3, because of: "
    - "r3c8: delete candidates 2,4, r4c6: delete candidate 4, because of: "
    - "r4c0: delete candidate 2, r5c1: delete candidate 2, because of: "
    - "r4c3: delete candidate 6, because of: "
    - "r4c5: delete candidate 2, because of: "
    - "r5c1: delete candidate 2, r5c7: delete candidate 2, because of: "
    - "r6c6: delete candidates 4,8, because of: "
    - "r7c3: delete candidates 5,7,8,9, because of: "
    - "r7c6: delete candidate 3, r7c7: delete candidate 3, because of: "
    - "r7c7: delete candidate 3, because of: "
    - "r8c2: delete candidate 9, because of: "
    - "r8c8: delete candidates 4,5,6, because of: "
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │  2  │     ║ 1 3 │     │     ║ 1 3 │     │     ║
    - ║  9  │     │     ║     │  8  │  4  ║     │  6  │  5  ║
    - ║     │     │ 7   ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║ 1   │ 1   │     ║     │   3 │     ║
    - ║  6  │     │  4  ║     │     │  5  ║  2  │     │  7  ║
    - ║     │  8  │     ║   9 │   9 │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │ 1   ║     │     │  2  ║     │     │     ║
    - ║  5  │  3  │     ║   6 │  7  │     ║ 4   │  8  │ 4   ║
    - ║     │     │     ║   9 │     │     ║   9 │     │   9 ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║  2  │   3 │     ║     │  2  │     ║
    - ║  7  │  6  │     ║     │     │  1  ║  5  │ 4   │     ║
    - ║     │     │  89 ║  8  │     │     ║     │     │  89 ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║  2  │     │     ║     │  2  │     ║
    - ║ 4   │  5  │  3  ║     │   6 │     ║     │ 4   │  1  ║
    - ║     │     │     ║ 78  │     │ 78  ║  89 │ 7   │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │ 1   │     ║     │     │     ║     │     │     ║
    - ║     │     │     ║  4  │  5  │  9  ║  6  │     │  3  ║
    - ║     │  8  │  8  ║     │     │     ║     │ 7   │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║     │     │     ║   3 │     │     ║
    - ║  1  │ 4   │  5  ║     │  2  │  6  ║     │  9  │ 4   ║
    - ║     │ 7   │     ║ 78  │     │     ║     │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │     │     ║ 1   │     │     ║     │     │     ║
    - ║     │     │  2  ║     │  4  │     ║     │  5  │   6 ║
    - ║     │ 7 9 │     ║     │     │ 78  ║  8  │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │  2  ║
    - ║  8  │ 4   │   6 ║  5  │  5  │  3  ║  7  │  1  │     ║
    - ║     │   9 │     ║   9 │   9 │     ║     │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons: []
    actions:
      - position:
          row: 0
          column: 1
        deleteCandidates:
          - 1
      - position:
          row: 0
          column: 2
        deleteCandidates:
          - 1
      - position:
          row: 1
          column: 1
        deleteCandidates:
          - 1
  - reasons: []
    actions:
      - position:
          row: 0
          column: 1
        deleteCandidates:
          - 7
  - reasons: []
    actions:
      - position:
          row: 0
          column: 2
        deleteCandidates:
          - 1
      - position:
          row: 5
          column: 2
        deleteCandidates:
          - 1
  - reasons: []
    actions:
      - position:
          row: 0
          column: 3
        deleteCandidates:
          - 2
      - position:
          row: 2
          column: 3
        deleteCandidates:
          - 2
  - reasons: []
    actions:
      - position:
          row: 1
          column: 3
        deleteCandidates:
          - 3
      - position:
          row: 1
          column: 4
        deleteCandidates:
          - 3
  - reasons: []
    actions:
      - position:
          row: 1
          column: 4
        deleteCandidates:
          - 3
  - reasons: []
    actions:
      - position:
          row: 2
          column: 0
        deleteCandidates:
          - 2
      - position:
          row: 4
          column: 0
        deleteCandidates:
          - 2
  - reasons: []
    actions:
      - position:
          row: 2
          column: 3
        deleteCandidates:
          - 1
      - position:
          row: 2
          column: 6
        deleteCandidates:
          - 1
  - reasons: []
    actions:
      - position:
          row: 2
          column: 8
        deleteCandidates:
          - 5
  - reasons: []
    actions:
      - position:
          row: 2
          column: 8
        deleteCandidates:
          - 5
      - position:
          row: 7
          column: 8
        deleteCandidates:
          - 5
      - position:
          row: 8
          column: 8
        deleteCandidates:
          - 5
  - reasons: []
    actions:
      - position:
          row: 3
          column: 3
        deleteCandidates:
          - 3
  - reasons: []
    actions:
      - position:
          row: 3
          column: 8
        deleteCandidates:
          - 2
          - 4
      - position:
          row: 4
          column: 6
        deleteCandidates:
          - 4
  - reasons: []
    actions:
      - position:
          row: 4
          column: 0
        deleteCandidates:
          - 2
      - position:
          row: 5
          column: 1
        deleteCandidates:
          - 2
  - reasons: []
    actions:
      - position:
          row: 4
          column: 3
        deleteCandidates:
          - 6
  - reasons: []
    actions:
      - position:
          row: 4
          column: 5
        deleteCandidates:
          - 2
  - reasons: []
    actions:
      - position:
          row: 5
          column: 1
        deleteCandidates:
          - 2
      - position:
          row: 5
          column: 7
        deleteCandidates:
          - 2
  - reasons: []
    actions:
      - position:
          row: 6
          column: 6
        deleteCandidates:
          - 4
          - 8
  - reasons: []
    actions:
      - position:
          row: 7
          column: 3
        deleteCandidates:
          - 5
          - 7
          - 8
          - 9
  - reasons: []
    actions:
      - position:
          row: 7
          column: 6
        deleteCandidates:
          - 3
      - position:
          row: 7
          column: 7
        deleteCandidates:
          - 3
  - reasons: []
    actions:
      - position:
          row: 7
          column: 7
        deleteCandidates:
          - 3
  - reasons: []
    actions:
      - position:
          row: 8
          column: 2
        deleteCandidates:
          - 9
  - reasons: []
    actions:
      - position:
          row: 8
          column: 8
        deleteCandidates:
          - 4
          - 5
          - 6
